objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Deal_Approval_Pending_Time__c</fullName>
        <description>This field will be used to calculate the time an Opportunity has taken or is taking to become approved. It will be a running time in the Pending status and will stop running when the record is approved.</description>
        <formula>IF ( 
ISPICKVAL(Deal_Approval_Status__c , &quot;Pending&quot;), 
/* Days */ 
TEXT(FLOOR( NOW()-Approval_Start_Date__c)) &amp; &quot; days &quot; &amp; 
/* Hours */ 
TEXT( FLOOR( 24 * ( NOW()-Approval_Start_Date__c - FLOOR(NOW()-Approval_Start_Date__c) ))) &amp; &quot; hours &quot; &amp; 
/* Minutes */ 
TEXT( ROUND(60 * (ROUND( 24 * ( NOW()-Approval_Start_Date__c - FLOOR(NOW()-Approval_Start_Date__c) ),8) - FLOOR( 
ROUND( 24 * ( NOW()-Approval_Start_Date__c - FLOOR(NOW()-Approval_Start_Date__c) ),8)) ),0)) &amp; &quot; min &quot; 
, 
IF( 
ISPICKVAL(Deal_Approval_Status__c , &quot;Approved&quot;), 
/* Days */ 
TEXT(FLOOR( Approval_End_Date__c-Approval_Start_Date__c)) &amp; &quot; days &quot; &amp; 
/* Hours */ 
TEXT( FLOOR( 24 * ( Approval_End_Date__c-Approval_Start_Date__c - FLOOR(Approval_End_Date__c-Approval_Start_Date__c) ))) &amp; &quot; hours &quot; &amp; 
/* Minutes */ 
TEXT( ROUND(60 * (ROUND( 24 * ( Approval_End_Date__c-Approval_Start_Date__c - FLOOR(Approval_End_Date__c-Approval_Start_Date__c) ),8) - FLOOR( 
ROUND( 24 * ( Approval_End_Date__c-Approval_Start_Date__c - FLOOR(Approval_End_Date__c-Approval_Start_Date__c) ),8)) ),0)) &amp; &quot; min &quot; 
, 
&quot;0&quot; 
) 
)</formula>
        <label>Deal Approval Pending Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Approval_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Approval Region</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$User.Region__c</field>
                <operation>equals</operation>
                <valueField>Deal_Approval_Manager__c.Name</valueField>
            </filterItems>
            <infoMessage>Your default region:</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Deal_Approval_Manager__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Approval_Status__c</fullName>
        <label>Deal Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Fast Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Fast Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending DQM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved DQM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Review_Type_Final__c</fullName>
        <formula>IF(ISPICKVAL(Deal_Review_Type_Override__c,&quot;&quot;),TEXT(Deal_Review_Type__c) ,Text(Deal_Review_Type_Override__c))</formula>
        <label>Deal Review Type Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Review_Type_Override__c</fullName>
        <label>Deal Review Type Override</label>
        <picklist>
            <picklistValues>
                <fullName>Add-on: Co-term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add on: Extend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-on: HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-on: HW Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-on: Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serv</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Review_Type__c</fullName>
        <inlineHelpText>Renewal = Total Replace
Partial = Partial Replace
Add-onTechnology = 1st time tech
Add-on:Hardware = New HW
Add-on:Co-term= Add’l capcity
Add-onExtend = Add’l capcity+extend
New = New customer
Restructure = Debook/rebook
Early = Early renewal</inlineHelpText>
        <label>Deal Review Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add on: Extend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-on: Co-term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-on: HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-on: HW Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-on: Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serv</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Review_Type_ref__c</fullName>
        <formula>Text(Deal_Review_Type__c)</formula>
        <label>Deal Review Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Start_Date_Check__c</fullName>
        <formula>IF( ISPICKVAL(Status__c, &quot;Active&quot;), IF ( Deal_Start_Date__c &lt;= TODAY(), IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Error&quot;, 16, 16), IF(Deal_Start_Date__c &lt;= TODAY() + 7, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Warning&quot;, 16, 16), &quot;&quot;)),&quot;&quot;)</formula>
        <label>DSD Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Start_Date__c</fullName>
        <label>Deal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Discount__c</fullName>
        <label>Default Discount</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Default_Region_FM_DMS__c</fullName>
        <label>Default Region FM DMS</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <label>Director</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disc_Approval_ref__c</fullName>
        <formula>Discount_Approval_SFDC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disc Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_SFDC__c</fullName>
        <formula>/*

IF( New_SFDCOV__c  = &quot;New&quot;,IF( Order_Type_DMS__c &lt;&gt;&quot;1-SW&quot;,&quot;&quot;,IF( Proposed_Discount_DMS__c &lt;= min( Authorized_Deal_Discount_SFDC__c , Approved_Discount_Director__c , Approved_Discount_HQ__c , Approved_Discount_HQ_Admin__c , Approved_Discount_Region__c , Approved_Discount_VP__c ),&quot;Pass&quot;,&quot;Fail Disc&quot;)), Discount_Approval__c )

*/

Proposed_vs_Auth_Discount_Status__c</formula>
        <label>Discount Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval__c</fullName>
        <label>Discount Approval Old</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Trend_SFDC__c</fullName>
        <inlineHelpText>ASP Trend for Fast Track</inlineHelpText>
        <formula>IF( Order_Type__c &lt;&gt;&quot;1-SW&quot;,0,min(3,max(-1,IF(  New_SFDCOV__c = &quot;New&quot;, ((1- Proposed_Discount_DMS__c )/(1- Prior_Installed_Discount__c )-1), Discount_Trend__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASP Trend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Trend__c</fullName>
        <label>ASP Trend Old</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Domains__c</fullName>
        <label>Domains</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <label>Escalation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Quarter_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected Close Quarter</label>
        <referenceTo>Expected_Close_Quarter__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FID_Check__c</fullName>
        <formula>IF ( First_Invoice_Date__c &lt; Deal_Start_Date__c, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Error&quot;, 16, 16), IF( AND(  Probability &lt; 1.00, First_Invoice_Date__c &lt;= TODAY()), IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Warning&quot;, 16, 16), &quot;&quot;))</formula>
        <label>FID Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FT_Country_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All Ship-to, Bill-to, Paying Entity, and End-user-location addresses are within the same country</inlineHelpText>
        <label>Same Country Location(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FT_Legal_Certification__c</fullName>
        <formula>&quot;BY SUBMITTING THIS INFORMATION, YOU CERTIFY THAT THE INFORMATION IS TRUE AND CORRECT AND IS CONSISTENT WITH THE CADENCE CODE OF BUSINESS CONDUCT&quot;</formula>
        <label>Legal Certification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FT_Online_T_Cs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Using On-line T&amp;Cs (except Japan &amp; Russia, check if standard paper T&amp;Cs)</inlineHelpText>
        <label>On-line T&amp;Cs (except for Japan &amp; Russia)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FT_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This has standard pricing for WAN, Regional Price Uplift, Short-term Premium</inlineHelpText>
        <label>Standard WAN, Uplift, Premium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FT_Transactions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is NOT negotiated with prior transactions in previous/current quarter, or future transactions in the next quarter, including LOANs</inlineHelpText>
        <label>Independent of prior/future transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Track_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Track Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Track_Eligible__c</fullName>
        <formula>IF( 
    AND( 
        NOT(ISBLANK( Approval_Hierarchy__c )), 
        
        ISPICKVAL(Terms_and_Conditions__c, &apos;STD&apos;), 
        
        OR( 
            ISPICKVAL(Transaction_Type__c, &apos;99-YR/Other&apos;), 
            ISPICKVAL(Transaction_Type__c, &apos;TBL&apos;), 
            ISPICKVAL(Transaction_Type__c, &apos;IP - Tensilica&apos;) 
        ), 
        
        IF( 
            OR( 
                ISPICKVAL(Transaction_Type__c, &apos;99-YR/Other&apos;), 
                AND( 
                    ISPICKVAL(Transaction_Type__c, &apos;TBL&apos;), 
                    ASP_Version__c = &apos;ASP&apos;                                                                
                ) 
            ),             
            
            AND( 
                ASP_Ratio_SFDC__c &gt;= 0.8, 
                Discount_Trend_SFDC__c &gt;= 0 
            ),             
            
            IF( 
                AND( 
                    ISPICKVAL(Transaction_Type__c, &apos;TBL&apos;), 
                    ASP_Version__c = &apos;DQM&apos;
                ), 
                AND( 
                    DQM_Proposed_Core_SW__c &gt;= 0.8, 
                    DQM_Trend_Core_SW__c &gt;= 0 
                ), 
                NOT(
                    AND(
                        ISPICKVAL(Transaction_Type__c, &apos;TBL&apos;),
                        ASP_Version__c &lt;&gt; &apos;ASP&apos;,
                        ASP_Version__c &lt;&gt; &apos;DQM&apos;
                    )
                )
            ) 
        ), 
        
        IF(
            ISPICKVAL(Transaction_Type__c, &apos;99-YR/Other&apos;), 
            AND( 
                NOT(ISBLANK(Primary_Quote_name__c)), 
                TCV__c &lt;= 1000000 
            ), 
            true 
        ),
        
        IF( ISPICKVAL(Transaction_Type__c, &apos;TBL&apos;), 
            AND( 
                TCV__c &lt;= 1000000, 
                SQW_Uploaded_to_DMS__c = &apos;Yes&apos;, 
                ISPICKVAL(Payment_Terms__c, &apos;NET 30&apos;), 
                OR( 
                    ISPICKVAL(Billing_Plan__c, &apos;100% Upfront&apos;), 
                    ISPICKVAL(Billing_Plan__c, &apos;Even Quarterly&apos;), 
                    ISPICKVAL(Billing_Plan__c, &apos;Even Semi-Annually&apos;), 
                    ISPICKVAL(Billing_Plan__c, &apos;Even Annually&apos;) 
                ) 
            ), 
            true 
        ), 
        
        IF( ISPICKVAL(Transaction_Type__c, &apos;IP - Tensilica&apos;), 
            AND( 
                TCV__c &lt;= 150000, 
                ProposedDiscount__c &lt; 20.0, 
                ISPICKVAL(Payment_Terms__c, &apos;NET 30&apos;), 
                ISPICKVAL(Billing_Plan__c, &apos;100% Upfront&apos;) 
            ), 
            true 
        )                   
    ), 
    true, 
    false 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fast Track Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Track_Verify__c</fullName>
        <formula>AND(
  OR(
    ISPICKVAL(Transaction_Type__c, &apos;99-YR/Other&apos;),
    ISPICKVAL(Transaction_Type__c, &apos;TBL&apos;),
    ISPICKVAL(Transaction_Type__c, &apos;IP - Tensilica&apos;)
  ),
  FT_Pricing__c,
  FT_Transactions__c,
  FT_Country_Address__c,
  FT_Online_T_Cs__c,
  IF( ISPICKVAL(Transaction_Type__c, &apos;IP - Tensilica&apos;), 
    OnlySDKProducts__c, 
    true
  )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fast Track Verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Level_DQM__c</fullName>
        <formula>IF( AND( TCV__c &gt; 50000,
        OR(
            OR(
                OR(
                    AND( TCV__c &gt;= 500000,
                        OR( AND( NOT(ISBLANK(Region_Override_DQM__c)), Region_Override_DQM__c &lt; 0.8),
                            AND( NOT(ISBLANK(Region_Override_Core_SW__c)), Region_Override_Core_SW__c &lt; 0.8),
                            AND( NOT(ISBLANK(Region_Override_DSG__c)), Region_Override_DSG__c &lt; 0.8),
                            AND( NOT(ISBLANK(Region_Override_CIC__c)), Region_Override_CIC__c &lt; 0.8),
                            AND( NOT(ISBLANK(Region_Override_SPB__c)), Region_Override_SPB__c &lt; 0.8),
                            AND( NOT(ISBLANK(Region_Override_SVG_SW__c)), Region_Override_SVG_SW__c &lt; 0.8)
                        )
                    ),
                    AND( TCV__c &lt; 500000,
                        OR( AND( NOT(ISBLANK(Region_Override_DQM__c)), Region_Override_DQM__c &lt; 0.5),
                            AND( NOT(ISBLANK(Region_Override_Core_SW__c)), Region_Override_Core_SW__c &lt; 0.5),
                            AND( NOT(ISBLANK(Region_Override_DSG__c)), Region_Override_DSG__c &lt; 0.5),
                            AND( NOT(ISBLANK(Region_Override_CIC__c)), Region_Override_CIC__c &lt; 0.5),
                            AND( NOT(ISBLANK(Region_Override_SPB__c)), Region_Override_SPB__c &lt; 0.5),
                            AND( NOT(ISBLANK(Region_Override_SVG_SW__c)), Region_Override_SVG_SW__c &lt; 0.5)
                        )
                    )
                )
            ),
            AND( HQ_Override_Approval_Required__c = TRUE,
                OR( NOT( ISBLANK(HQ_Override_Core_SW_DQM__c)), 
                    NOT( ISBLANK(HQ_Override_DSG_DQM__c)), 
                    NOT( ISBLANK(HQ_Override_CIC_DQM__c)), 
                    NOT( ISBLANK(HQ_Override_SPB_DQM__c)), 
                    NOT( ISBLANK(HQ_Override_SVG_SW_DQM__c)), 
                    NOT( ISBLANK(HQ_Override_Core_SW_w_o_Loans_DQM__c)) 
                )
            )
        )
    ),
    &quot;HQ&quot;,
    IF( AND( TCV__c &lt;= 50000, ISPICKVAL(DQM_Approval_Level__c, &quot;HQ&quot;)),
        &quot;Region&quot;,
        TEXT(DQM_Approval_Level__c)
    )
)</formula>
        <label>Final Approval Level DQM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Authorized_CIC_DQM__c</fullName>
        <formula>ROUND(
    IF( NOT( ISBLANK(HQ_Override_CIC_DQM__c)),
        HQ_Override_CIC_DQM__c,
        IF( NOT( ISBLANK(Region_Override_CIC__c)),
            Region_Override_CIC__c,
            IF( NOT( ISBLANK(Region_Override_DQM__c)),
                Region_Override_DQM__c * DQM_Region_Override_Factor__c,
                DQM_Authorized_CIC__c
            )
        )
    ), 3
)</formula>
        <label>Final Authorized CIC DQM</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Authorized_Core_SW_DQM__c</fullName>
        <formula>ROUND(
    IF( NOT(ISBLANK(HQ_Override_Core_SW_DQM__c)),
        HQ_Override_Core_SW_DQM__c,
        IF( NOT( ISBLANK(Region_Override_Core_SW__c)),
            Region_Override_Core_SW__c,
            IF( NOT(ISBLANK(Region_Override_DQM__c)),
                Region_Override_DQM__c,
                DQM_Authorized_Core_SW__c
            )
        )
    ), 3
)</formula>
        <label>Final Authorized Core SW DQM</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Authorized_Core_SW_w_o_Loans_DQM__c</fullName>
        <formula>ROUND(
 IF(
   NOT( ISBLANK(HQ_Override_Core_SW_w_o_Loans_DQM__c) ),
   HQ_Override_Core_SW_w_o_Loans_DQM__c, 
   IF(
     NOT( ISBLANK(Region_Override_Core_SW_w_o_Loans_DQM__c) ),
     Region_Override_Core_SW_w_o_Loans_DQM__c,
     DQM_Authorized_Core_SW_w_o_Loans__c
   )
 ), 3
)</formula>
        <label>Final Authorized Core SW w/o Loans DQM</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Authorized_DSG_DQM__c</fullName>
        <formula>ROUND(
    IF( NOT( ISBLANK(HQ_Override_DSG_DQM__c)),
        HQ_Override_DSG_DQM__c,
        IF( NOT( ISBLANK(Region_Override_DSG__c)),
            Region_Override_DSG__c,
            IF( NOT( ISBLANK(Region_Override_DQM__c)),
                Region_Override_DQM__c * DQM_Region_Override_Factor__c,
                DQM_Authorized_DSG__c
            )
        )
    ), 3
)</formula>
        <label>Final Authorized DSG DQM</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Authorized_SPB_DQM__c</fullName>
        <formula>ROUND(
    IF( NOT( ISBLANK(HQ_Override_SPB_DQM__c)),
        HQ_Override_SPB_DQM__c,
        IF( NOT( ISBLANK(Region_Override_SPB__c)),
            Region_Override_SPB__c,
            IF( NOT( ISBLANK(Region_Override_DQM__c)),
                Region_Override_DQM__c * DQM_Region_Override_Factor__c,
                DQM_Authorized_SPB__c
            )
        )
    ), 3
)</formula>
        <label>Final Authorized SPB DQM</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Authorized_SVG_SW_DQM__c</fullName>
        <formula>ROUND(
    IF( NOT( ISBLANK(HQ_Override_SVG_SW_DQM__c)),
        HQ_Override_SVG_SW_DQM__c,
        IF( NOT( ISBLANK(Region_Override_SVG_SW__c)),
            Region_Override_SVG_SW__c,
            IF( NOT( ISBLANK(Region_Override_DQM__c)),
                Region_Override_DQM__c * DQM_Region_Override_Factor__c,
                DQM_Authorized_SVG_SW__c
            )
        )
    ), 3
)</formula>
        <label>Final Authorized SVG SW DQM</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Source_CIC__c</fullName>
        <formula>IF( NOT( ISBLANK(HQ_Override_CIC_DQM__c)), 
&apos;(HQ)&apos;, 
IF( NOT( ISBLANK(Region_Override_CIC__c)), 
&apos;(Region)&apos;, 
IF( NOT( ISBLANK(Region_Override_DQM__c)), 
&apos;(Region)&apos;, 
&apos;&apos; 
) 
) 
)</formula>
        <label>Final Source CIC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Source_Core_SW__c</fullName>
        <formula>IF( NOT(ISBLANK(HQ_Override_Core_SW_DQM__c)), 
&apos;(HQ)&apos;, 
IF( NOT( ISBLANK(Region_Override_Core_SW__c)), 
&apos;(Region)&apos;, 
IF( NOT(ISBLANK(Region_Override_DQM__c)), 
&apos;(Region)&apos;, 
&apos;&apos; 
) 
) 
)</formula>
        <label>Final Source Core SW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Source_Core_SW_w_o_Loans__c</fullName>
        <formula>IF(
NOT( ISBLANK(HQ_Override_Core_SW_w_o_Loans_DQM__c) ),
&apos;(HQ)&apos;, 
IF(
NOT( ISBLANK(Region_Override_Core_SW_w_o_Loans_DQM__c) ),
&apos;(Region)&apos;,
&apos;&apos;
)
)</formula>
        <label>Final Source Core SW w/o Loans</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Source_DSG__c</fullName>
        <formula>IF( NOT( ISBLANK(HQ_Override_DSG_DQM__c)), 
&apos;(HQ)&apos;, 
IF( NOT( ISBLANK(Region_Override_DSG__c)), 
&apos;(Region)&apos;, 
IF( NOT( ISBLANK(Region_Override_DQM__c)), 
&apos;(Region)&apos;, 
&apos;&apos; 
) 
) 
)</formula>
        <label>Final Source DSG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Source_SPB__c</fullName>
        <formula>IF( NOT( ISBLANK(HQ_Override_SPB_DQM__c)), 
&apos;(HQ)&apos;, 
IF( NOT( ISBLANK(Region_Override_SPB__c)), 
&apos;(Region)&apos;, 
IF( NOT( ISBLANK(Region_Override_DQM__c)), 
&apos;(Region)&apos;, 
&apos;&apos; 
) 
) 
)</formula>
        <label>Final Source SPB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Source_SVG_SW__c</fullName>
        <formula>IF( NOT( ISBLANK(HQ_Override_SVG_SW_DQM__c)), 
&apos;(HQ)&apos;, 
IF( NOT( ISBLANK(Region_Override_SVG_SW__c)), 
&apos;(Region)&apos;, 
IF( NOT( ISBLANK(Region_Override_DQM__c)), 
&apos;(Region)&apos;, 
&apos;&apos; 
) 
) 
)</formula>
        <label>Final Source SVG SW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Invoice_Date__c</fullName>
        <inlineHelpText>Please input the date of the 1st invoice expected to be issued to the customer</inlineHelpText>
        <label>1st Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flow_to_choose__c</fullName>
        <label>Flow to choose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundry__c</fullName>
        <description>Customer&apos;s target foundry</description>
        <inlineHelpText>Customer&apos;s target foundry</inlineHelpText>
        <label>Foundry</label>
        <picklist>
            <picklistValues>
                <fullName>GlobalFoundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UMC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HAX_Probability__c</fullName>
        <inlineHelpText>10% (Discovery) 
20% (Eval started with eval terms agreed) 
30% (RFQ) 
50% (Eval complete and Quote sent) 
65% (Forecast committed) 
100% (Booked)</inlineHelpText>
        <label>HAX Probability</label>
        <picklist>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HQ_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HQ Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HQ_Authorized_ASP_Ratio_SFDC_c__c</fullName>
        <formula>IF( HQ_Authorized_Discount__c &gt;0,(1- HQ_Authorized_Discount__c )/(1- ASP_Discount_DMS__c ),null)</formula>
        <label>HQ Authorized ASP Ratio</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HQ_Authorized_Discount__c</fullName>
        <label>HQ Authorized Discount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HQ_HQ_SF_Approval_Threshold__c</fullName>
        <formula>/* HQ &amp; HQ SF */
IF(
 Approval_Threshold_Reason__c =&quot;7&quot;,
&quot;TCV (&quot; &amp; TEXT(TCV__c) &amp; &quot;) &lt; TCV Approval Thresh. 1 (&quot; &amp; TEXT(Deal_Approval_Region__r.Software_TCV_Threshold_1__c) &amp;&quot;)&quot;&amp; BR() &amp;
&quot;ASP Ratio (&quot; &amp; TEXT(ASP_Ratio__c) &amp; &quot;) &lt; ASP Ratio Approval Thresh. 1 (&quot; &amp; TEXT(Deal_Approval_Region__r.Software_ASP_Ratio_Threshold_1__c) &amp; &quot;)&quot;,
IF(
 Approval_Threshold_Reason__c =&quot;8&quot;,
&quot;TCV (&quot; &amp; TEXT(TCV__c) &amp; &quot;) &gt;= TCV Approval Thresh. 1 (&quot; &amp; TEXT(Deal_Approval_Region__r.Software_TCV_Threshold_1__c) &amp;&quot;)&quot;&amp; BR() &amp;
&quot;TCV (&quot; &amp; TEXT(TCV__c) &amp; &quot;) &lt; TCV Approval Thresh. 3 (&quot; &amp; TEXT(Deal_Approval_Region__r.Software_TCV_Threshold_3__c) &amp;&quot;)&quot;&amp; BR() &amp;
&quot;ASP Ratio (&quot; &amp; TEXT(ASP_Ratio__c) &amp; &quot;) &lt; ASP Ratio Approval Thresh. 2 (&quot; &amp; TEXT(Deal_Approval_Region__r.Software_ASP_Ratio_Threshold_2__c)  &amp; &quot;)&quot;,
IF(
 Approval_Threshold_Reason__c =&quot;9&quot;,
&quot;TCV (&quot; &amp; TEXT(TCV__c) &amp; &quot;) &gt;= TCV Approval Thresh. 1 (&quot; &amp; TEXT(Deal_Approval_Region__r.Software_TCV_Threshold_1__c) &amp;&quot;)&quot;&amp; BR() &amp;
&quot;TCV (&quot; &amp; TEXT(TCV__c) &amp; &quot;) &lt; TCV Approval Thresh. 3 (&quot; &amp; TEXT(Deal_Approval_Region__r.Software_TCV_Threshold_3__c) &amp;&quot;)&quot;&amp; BR() &amp;
&quot;Min PS ASP (&quot; &amp; TEXT(Min_PS_ASP__c) &amp; &quot;) &lt; Min PS ASP Approval Thresh. 1 (&quot; &amp; TEXT(Deal_Approval_Region__r.Software_PS_ASP_Threshold_1__c)  &amp; &quot;)&quot;,
IF(
 Approval_Threshold_Reason__c =&quot;10&quot;,
&quot;TCV (&quot; &amp; TEXT(TCV__c) &amp; &quot;) &gt;= TCV Approval Thresh. 1 (&quot; &amp; TEXT(Deal_Approval_Region__r.Software_TCV_Threshold_1__c) &amp;&quot;)&quot;&amp; BR() &amp;
&quot;TCV (&quot; &amp; TEXT(TCV__c) &amp; &quot;) &lt; TCV Approval Thresh. 3 (&quot; &amp; TEXT(Deal_Approval_Region__r.Software_TCV_Threshold_3__c) &amp;&quot;)&quot;&amp; BR() &amp;
&quot;Discount Trend (&quot; &amp; TEXT(Discount_Trend__c) &amp; &quot;) &lt; Discount Trend Approval Thresh. 1 (&quot; &amp; TEXT(Deal_Approval_Region__r.Software_Discount_Trend_Threshold_1__c)  &amp; &quot;)&quot;,
IF(
 Approval_Threshold_Reason__c =&quot;11&quot;,
&quot;TCV (&quot; &amp; TEXT(TCV__c) &amp; &quot;) &gt;= TCV Approval Thresh. 3 (&quot; &amp; TEXT(Deal_Approval_Region__r.Software_TCV_Threshold_3__c) &amp;&quot;)&quot;,
&quot;&quot;
)
)
)
)
)</formula>
        <label>HQ HQ SF Approval Threshold Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Override_Approval_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>HQ Override Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HQ_Override_CIC_DQM__c</fullName>
        <label>HQ Override CIC DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HQ_Override_Core_SW_DQM__c</fullName>
        <label>HQ Override Core SW DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HQ_Override_Core_SW_w_o_Loans_DQM__c</fullName>
        <label>HQ Override Core SW w/o Loans DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HQ_Override_DSG_DQM__c</fullName>
        <label>HQ Override DSG DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HQ_Override_SPB_DQM__c</fullName>
        <label>HQ Override SPB DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HQ_Override_SVG_SW_DQM__c</fullName>
        <label>HQ Override SVG SW DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HQ_Start__c</fullName>
        <label>HQ Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HQ_Total_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HQ Total Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HW_Platform__c</fullName>
        <label>HW Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Palladium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rapid Prototyping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_HQ_Overrides__c</fullName>
        <formula>OR( NOT( ISBLANK(HQ_Override_Core_SW_DQM__c)),
    NOT( ISBLANK(HQ_Override_DSG_DQM__c)),
    NOT( ISBLANK(HQ_Override_CIC_DQM__c)),
    NOT( ISBLANK(HQ_Override_SPB_DQM__c)),
    NOT( ISBLANK(HQ_Override_SVG_SW_DQM__c)),
    NOT( ISBLANK(HQ_Override_Core_SW_w_o_Loans_DQM__c))
)</formula>
        <label>Has HQ Overrides</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>